MDEV-13818 CREATE INDEX leaks memory if running out of undo log space

if create_index_dict() fails, we need to free ctx->add_index[a] too

This fixes innodb.alter_crash and innodb.instant_alter_debug
failures in ASAN_OPTIONS="abort_on_error=1" runs