storage/innobase/handler/handler0alter.cc
@@ -5634,18 +5634,19 @@ new_table_failed:
 		ctx->trx->table_id = user_table->id;
 
 		for (ulint a = 0; a < ctx->num_to_add_index; a++) {
-			dict_index_t*& index = ctx->add_index[a];
+			dict_index_t* index = ctx->add_index[a];
 			const bool has_new_v_col = index->has_new_v_col;
 			index = create_index_dict(ctx->trx, index, add_v);
 			if (!index) {
 				error = ctx->trx->error_state;
 				ut_ad(error != DB_SUCCESS);
 error_handling_drop_uncached:
-				while (++a < ctx->num_to_add_index) {
+				do {
 					dict_mem_index_free(ctx->add_index[a]);
-				}
+				} while (++a < ctx->num_to_add_index);
 				goto error_handling;
 			}
+			ctx->add_index[a]= index;
 
 			index->parser = index_defs[a].parser;
 			index->has_new_v_col = has_new_v_col;
